gitops/apps/renovate-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renovate-operator
  labels:
    name: renovate-operator
